[ 💄 ] 메인페이지 수정

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>미니 실험 도구</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
+    <h1>미니 실험 도구</h1>
+    <p>아래의 도구들을 이용해보세요!</p>
     <ul>
-      <li>랜덤 색상 조합 추천기 :예술:</li>
-      <li>텍스트 길이 측정기 :1234:</li>
-      <li>입력한 숫자의 배수 보여주기 :시계_반대_방향_화살표:</li>
+      <li>랜덤 색상 조합 추천기🎨</li>
+      <li>길이 측정기🔢</li>
+      <li>
+        <a href="./pages/numMultiple/NumMultiple.html">
+          입력한 숫자의 배수 보여주기🔄</a
+        >
+      </li>
     </ul>
   </body>
 </html>
