fix: Edit index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <p>아래의 도구들을 이용해보세요!</p>
     <ul>
       <li>랜덤 색상 조합 추천기🎨</li>
-      <li>길이 측정기🔢</li>
+      <li>
+        <a href="./pages/text_length_measure_page/textLengthMeasurePage.html"
+          >길이 측정기🔢</a
+        >
+      </li>
       <li>
         <a href="./pages/numMultiple/NumMultiple.html">
           입력한 숫자의 배수 보여주기🔄</a
