[ ✨ | #8 ] 메인페이지 링크 연결

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>미니 실험 도구</h1>
     <p>아래의 도구들을 이용해보세요!</p>
     <ul>
-      <li>랜덤 색상 조합 추천기🎨</li>
+      <li><a href="./pages/color.html">색상 조합 추천기🎨</a></li>
       <li>길이 측정기🔢</li>
       <li>
         <a href="./pages/numMultiple/NumMultiple.html">
