--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <h1>미니 실험 도구</h1>
     <p>아래의 도구들을 이용해보세요!</p>
     <ul>
-      <li>랜덤 색상 조합 추천기🎨</li>
+
+      <li><a href="./pages/color.html">색상 조합 추천기🎨</a></li>
+
       <li>
         <a href="./pages/text_length_measure_page/textLengthMeasurePage.html"
           >길이 측정기🔢</a
         >
       </li>
+
       <li>
         <a href="./pages/numMultiple/NumMultiple.html">
           입력한 숫자의 배수 보여주기🔄</a
