fix : index.html 파일 수정

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <h1>미니 실험 도구</h1>
     <p>아래의 도구들을 이용해보세요!</p>
     <ul>
-      <li>랜덤 색상 조합 추천기🎨</li>
+      <li>
+      <a href="./pages/Color_blend/color.html"
+      >랜덤 색상 조합 추천기🎨</a
+    ></li>
       <li>
         <a href="./pages/text_length_measure_page/textLengthMeasurePage.html"
           >길이 측정기🔢</a
